fix: overflow hidden

--- a/YearCompletion/style.css
+++ b/YearCompletion/style.css
@@ -10,6 +10,7 @@ body{
     justify-content: center;
     height: 98vh;
     font-family: 'Roboto', sans-serif;
+    overflow: hidden;
 }
 
 .container{
